<resources>
    <!--
        Zasady pisania stringów:
            -apostrof (') trzeba poprzedzić backslashem (\)
            -znaczniki html muszą zaczynać się od &lt;
            -przejście do nowej linii &lt;br/>
            -procent (%) trzeba poprzedzić procentem (%)
            -parametry: %1$s dla stringów, %1$d dla intów
    -->
    <string name="app_name" translatable="false">Wrath of Kunczka</string>
    <string name="placeholder">Enter character\'s name</string>
    <string name="btn_play">Play</string>
    <string name="btn_forest">Forest</string>
    <string name="btn_shop">Shop</string>
    <string name="btn_inventory">Inventory</string>
    <string name="btn_attack">Attack</string>
    <string name="btn_ability">Ability</string>
    <string name="btn_use_item">Use item</string>
    <string name="btn_delete">Delete</string>
    <string name="use">Use</string>
    <string name="cancel">Cancel</string>
    <string name="combat_begin_infobox_1">You encounter a %1$s!</string>
    <string name="combat_begin_infobox_2">Prepare to attack!</string>
    <string name="combat_hp">HP: %1$d/%2$d</string>
    <string name="combat_character_hit">You attacked and dealt %1$d damage!</string>
    <string name="combat_character_miss">You attacked and missed…</string>
    <string name="combat_enemy_hit">%1$s attacked you and dealt %2$d damage!</string>
    <string name="combat_enemy_miss">%1$s attacked you and missed!</string>
    <string name="combat_win_title">You won!</string>
    <string name="combat_win_message">You get %1$d xp</string>
    <string name="combat_lose_title">You lost…</string>
    <string name="combat_lose_message">You are not worthy of playing this game…</string>
    <string name="combat_lose_button">End your misery</string>
    <string name="combat_use_nothing">You don\'t have any items to use</string>
    <string name="combat_use_potion">You drank potion and healed %1$d HP</string>
    <string name="combat_use_potion_full">You can\'t use potion at full HP</string>
    <string name="combat_use_scroll_title">You are using Scroll of Return</string>
    <string name="combat_use_scroll_message">You retreat from a fight!</string>
    <string name="encounter_combat_message">
        You encountered %1$s!&lt;br/>
        Prepare to fight!
    </string>
    <string name="encounter_gold_message">You found %1$d gold!</string>
    <string name="encounter_item_message">You found %1$s!</string>
    <string name="encounter_location_title">You wander into %1$s…</string>
    <string name="encounter_npc_forest_unvisited_message">
        After a while of wandering, you realize that you don\'t see much. There is some kind of fog
        floating in the air. Suddenly, you feel someone\'s gaze upon you. You nervously look around.
        Eventually, you see a shady individual. He starts to walk towards you. You are preparing for
        a fight, but luckily, you recognize him in time. His name\'s Fred. He\'s a friendly guy that
        you know by sight (you spoke with him once or twice). As he approaches you, you see that
        this weird fog is actually cigarette smoke that comes out of his mouth, nose, and, well,
        his cigarette. He greets you:&lt;br/>
        -Hello %1$s, I wouldn\'t guess I\'ll find you here.&lt;br/>
        -Yeah… I\'m just wandering around.&lt;br/>
        -By the way, I heard rumors that you want to fight Kunczka.&lt;br/>
        -Yes, that\'s right.&lt;br/>
        -In that case, I can share with you some useful information about the most common Forest
        inhabitant - the First-Year. They\'re relatively easy to defeat - the secret lies in…&lt;br/>
        And he continues talking for the rest of the day. With that new knowledge, you feel stronger
        in fights against First-Years.&lt;br/>
        &lt;b>You got 10%% damage boost against First-Years!&lt;/b>
    </string>
    <string name="encounter_npc_forest_visited_message">
        You meet Fred. He doesn\'t have anything more to say to help you with First-Years, but you talk all day anyway.
    </string>
    <string name="btn_load">Or load existing save</string>
</resources>