<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CombatActivity">

    <ImageView
        android:layout_width="1100dp"
        android:layout_height="0dp"
        android:src="@drawable/forest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/box"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kunczka"
            android:textColor="@color/green_500"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvHp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HP: 100/100"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutEnemy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHero">


        <!--        infoBox-->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/infobox"
            app:layout_constraintBottom_toTopOf="@+id/vView"
            app:layout_constraintEnd_toEndOf="@+id/tvPlayerInfo"
            app:layout_constraintStart_toStartOf="@+id/tvPlayerInfo"
            app:layout_constraintTop_toTopOf="@+id/tvPlayerInfo" />

        <TextView
            android:id="@+id/tvPlayerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:padding="12dp"
            android:text="You attacked and dealt 3 damage!"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vView"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            app:layout_constraintBottom_toTopOf="@+id/tvEnemyInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayerInfo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="@+id/btnAttack"
            app:layout_constraintEnd_toEndOf="@+id/btnAttack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAttack" />

        <Button
            android:id="@+id/btnAttack"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="21dp"
            android:background="#00000000"
            android:text="@string/btn_attack"
            android:textColor="#FFFFFF"
            app:icon="@drawable/sword_24"
            app:iconGravity="textStart"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/vView"
            app:layout_constraintEnd_toStartOf="@+id/btnAbility"
            app:layout_constraintStart_toStartOf="@+id/vView"
            app:layout_constraintTop_toTopOf="@+id/vView" />

        <ImageView
            android:id="@+id/ivAbility"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="@+id/btnAbility"
            app:layout_constraintEnd_toEndOf="@+id/btnAbility"
            app:layout_constraintStart_toStartOf="@+id/btnAbility"
            app:layout_constraintTop_toTopOf="@+id/btnAbility" />

        <Button
            android:id="@+id/btnAbility"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="21dp"
            android:backgroundTint="#00000000"
            android:text="@string/btn_ability"
            android:textColor="@color/white"
            app:icon="@drawable/outline_ability_24"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/vView"
            app:layout_constraintEnd_toStartOf="@+id/btnItem"
            app:layout_constraintStart_toEndOf="@+id/btnAttack"
            app:layout_constraintTop_toTopOf="@+id/vView" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="@+id/btnItem"
            app:layout_constraintEnd_toEndOf="@+id/btnItem"
            app:layout_constraintStart_toStartOf="@+id/btnItem"
            app:layout_constraintTop_toTopOf="@+id/btnItem" />


        <Button
            android:id="@+id/btnItem"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="21dp"
            android:backgroundTint="#00000000"
            android:text="@string/btn_use_item"
            android:textColor="@color/white"
            app:icon="@drawable/backpack_24"
            app:iconGravity="textStart"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/vView"
            app:layout_constraintEnd_toEndOf="@+id/vView"
            app:layout_constraintStart_toEndOf="@+id/btnAbility"
            app:layout_constraintTop_toTopOf="@+id/vView" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/infobox"
            app:layout_constraintBottom_toBottomOf="@+id/tvEnemyInfo"
            app:layout_constraintEnd_toEndOf="@+id/tvEnemyInfo"
            app:layout_constraintStart_toStartOf="@+id/tvEnemyInfo"
            app:layout_constraintTop_toBottomOf="@+id/vView" />

        <TextView
            android:id="@+id/tvEnemyInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:padding="12dp"
            android:text="Wolf attacked you and dealt 2 damage!"
            android:textAlignment="center"
            android:textColor="@color/color5Variant1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutEnemy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/box"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/tvEnemyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Year"
            android:textColor="@color/color5"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvEnemyHp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEnemyHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HP: 100/100"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnemyName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>